--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-lista-chequeo/components/form-lista-chequeo/form-lista-chequeo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-lista-chequeo/components/form-lista-chequeo/form-lista-chequeo.component.html
@@ -31,15 +31,15 @@
                               <label    class="label-left"
                                         style="margin-top: 1.8em;"
                                         for="estadoLista"
-                                        [class.color-secondaryColor]="( formLista.get('estadoLista').invalid && formLista.get('estadoLista').touched) || ( formLista.get('estadoLista') && esRegistroNuevo === false )">
+                                        [class.color-secondaryColor]="( formLista.get('estadoLista').invalid && formLista.get('estadoLista').touched) || ( formLista.get('estadoLista').invalid && esRegistroNuevo === false )">
                                         Estado de la lista
                               </label>
                             </div>
                             <div class="col d-flex">
                                 <mat-form-field appearance="fill" style="width: 90%;">
                                     <mat-select class="padding-left" formControlName="estadoLista" required>
-                                      <mat-option *ngFor="let requisito of booleanosEstadoReq" [value]="requisito.value">
-                                          {{requisito.viewValue}}
+                                      <mat-option *ngFor="let estado of listaEstadoListaChequeo" [value]="estado.codigo">
+                                          {{ estado.nombre }}
                                       </mat-option>
                                     </mat-select>
                                 </mat-form-field>
@@ -66,7 +66,7 @@
                               <label    class="label-left"
                                         style="margin-top: .9em;"
                                         for="nombreLista"
-                                        [class.color-secondaryColor]="( formLista.get('nombreLista').invalid && formLista.get('nombreLista').touched) || ( formLista.get('nombreLista') && esRegistroNuevo === false )">
+                                        [class.color-secondaryColor]="( formLista.get('nombreLista').invalid && formLista.get('nombreLista').touched) || ( formLista.get('nombreLista').invalid && esRegistroNuevo === false )">
                                         Nombre de la lista
                               </label>
                             </div>
@@ -109,15 +109,15 @@
                               <label    class="label-left"
                                         style="margin-top: 1.8em;"
                                         for="tipoLista"
-                                        [class.color-secondaryColor]="( formLista.get('tipoLista').invalid && formLista.get('tipoLista').touched) || ( formLista.get('tipoLista') && esRegistroNuevo === false )">
+                                        [class.color-secondaryColor]="( formLista.get('tipoLista').invalid && formLista.get('tipoLista').touched) || ( formLista.get('tipoLista').invalid && esRegistroNuevo === false )">
                                         La lista de chequeo está asociada a
                               </label>
                             </div>
                             <div class="col d-flex">
                                 <mat-form-field appearance="fill" style="width: 97%;">
                                     <mat-select class="padding-left" formControlName="tipoLista" required>
-                                      <mat-option *ngFor="let requisito of tiposListaChequeo" [value]="requisito.codigo">
-                                          {{requisito.nombre}}
+                                      <mat-option *ngFor="let menu of listaChequeoMenu" [value]="menu.codigo">
+                                          {{menu.nombre}}
                                       </mat-option>
                                     </mat-select>
                                 </mat-form-field>
@@ -145,7 +145,7 @@
                                   <label    class="label-left"
                                             style="margin-top: 1.8em;"
                                             for="criterioPago"
-                                            [class.color-secondaryColor]="( formLista.get('criterioPago').invalid && formLista.get('criterioPago').touched) || ( formLista.get('criterioPago') && esRegistroNuevo === false )">
+                                            [class.color-secondaryColor]="( formLista.get('criterioPago').invalid && formLista.get('criterioPago').touched) || ( formLista.get('criterioPago').invalid && esRegistroNuevo === false )">
                                             Criterio de pago
                                   </label>
                                 </div>
@@ -183,7 +183,7 @@
                                       <label    class="label-left"
                                                 style="margin-top: 1.8em;"
                                                 for="nombreRequisito"
-                                                [class.color-secondaryColor]="( requisito.get('nombreRequisito').invalid && requisito.get('nombreRequisito').touched) || ( requisito.get('nombreRequisito') && esRegistroNuevo === false )">
+                                                [class.color-secondaryColor]="( requisito.get('nombreRequisito').invalid && requisito.get('nombreRequisito').touched) || ( requisito.get('nombreRequisito').invalid && esRegistroNuevo === false )">
                                                 Nombre del requisito {{ i + 1 }}
                                       </label>
                                     </div>
