--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-lista-chequeo/components/tabla-bancos/tabla-bancos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-lista-chequeo/components/tabla-bancos/tabla-bancos.component.html
@@ -12,13 +12,13 @@
     <table mat-table [dataSource]="dataSource" matSort>
   
       <ng-container matColumnDef="nombreRequisito">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre del requisito </th>
-        <td mat-cell *matCellDef="let element" align="center"> {{ element.nombreRequisito }} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 60%;"> Nombre del requisito </th>
+        <td mat-cell *matCellDef="let element" align="center"> {{ element.nombre }} </td>
       </ng-container>
 
       <ng-container matColumnDef="estadoRequisito">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del requisito </th>
-        <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoRequisito }} </td>
+        <td mat-cell *matCellDef="let element" align="center"> {{ element.activo === true ? 'Activo' : 'Inactivo' }} </td>
       </ng-container>
     
       <ng-container matColumnDef="gestion">
@@ -28,19 +28,23 @@
           <button mat-raised-button 
                   color="accent" 
                   class="btn-table"
-                  [routerLink]="[ 'editarBanco', element.id ]">
+                  [routerLink]="[ 'editarBanco', element.listaChequeoItemId ]">
                   Ver detalle/Editar
           </button>
 
           <button mat-raised-button 
                   color="accent" 
-                  class="btn-table">
+                  class="btn-table"
+                  *ngIf="element.activo === true"
+                  (click)="activarDesactivarItem( element )">
                   Desactivar
           </button>
 
           <button mat-raised-button 
                   color="accent" 
-                  class="btn-table">
+                  class="btn-table"
+                  *ngIf="element.activo === false"
+                  (click)="activarDesactivarItem( element )">
                   Activar
           </button>
     
