--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-lista-chequeo/components/form-lista-chequeo/form-lista-chequeo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-lista-chequeo/components/form-lista-chequeo/form-lista-chequeo.component.html
@@ -1,4 +1,4 @@
-<section class="container text-center mb-2em">
+<section class="container text-center mb-2em" *ngIf="criteriosDePagoCodigo !== undefined">
     <div class="text-right">
         <a routerLink="/gestionListaChequeo" mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
@@ -152,7 +152,7 @@
                                 <div class="col d-flex">
                                     <mat-form-field appearance="fill" style="width: 97%;">
                                         <mat-select class="padding-left" formControlName="criterioPago" required>
-                                          <mat-option *ngFor="let criterio of listaCriterio" [value]="criterio.codigo">
+                                          <mat-option *ngFor="let criterio of listaCriteriosDePago" [value]="criterio.codigo">
                                               {{criterio.nombre}}
                                           </mat-option>
                                         </mat-select>
@@ -191,8 +191,8 @@
                                         <mat-form-field appearance="fill" style="width: 97%;">
                                             <mat-select class="padding-left" formControlName="nombreRequisito" required (ngModelChange)="getRequisitoValue( $event )">
                                                 <div *ngIf="requisito.get('nombreRequisito').value === null">
-                                                    <mat-option *ngFor="let requisito of listaRequisitos" [value]="requisito">
-                                                        {{requisito.nombre}}
+                                                    <mat-option *ngFor="let item of listaItems" [value]="item">
+                                                        {{ item.nombre }}
                                                     </mat-option>
                                                 </div>
                                                 <div *ngIf="requisito.get('nombreRequisito').value !== null">
