--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-lista-chequeo/components/tabla-lista-chequeo/tabla-lista-chequeo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-lista-chequeo/components/tabla-lista-chequeo/tabla-lista-chequeo.component.html
@@ -13,17 +13,17 @@
   
         <ng-container matColumnDef="fechaCreacion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de creación </th>
-            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
+            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCreacion }}</b> </td>
         </ng-container>
 
       <ng-container matColumnDef="nombreRequisito">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre de la lista </th>
-        <td mat-cell *matCellDef="let element" align="center"> {{ element.nombreRequisito }} </td>
+        <td mat-cell *matCellDef="let element" align="center"> {{ element.nombre }} </td>
       </ng-container>
 
       <ng-container matColumnDef="estadoRequisito">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la lista </th>
-        <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoRequisito }} </td>
+        <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoCodigo }} </td>
       </ng-container>
     
       <ng-container matColumnDef="gestion">
