--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-lista-chequeo/components/tabla-bancos/tabla-bancos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-lista-chequeo/components/tabla-bancos/tabla-bancos.component.html
@@ -13,7 +13,11 @@
   
       <ng-container matColumnDef="nombreRequisito">
         <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 60%;"> Nombre del requisito </th>
-        <td mat-cell *matCellDef="let element" align="center"> {{ element.nombre }} </td>
+        <td mat-cell *matCellDef="let element" align="center">
+          <div class="h-modal scroll">
+            {{ element.nombre }}
+          </div> 
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="estadoRequisito">
