pendiente de paquete 6

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/tabla-cronograma/tabla-cronograma.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/tabla-cronograma/tabla-cronograma.component.scss
@@ -30,4 +30,9 @@
   button.btn-calendario {
     margin-left: 0;
   }
+
+  .icon-incompleto {
+    margin-left: 1em;
+    transform: translateY(10px);
+  }
 }
