--- a/asivamosffie.web/asivamosffie/src/assets/scss/_general.scss
+++ b/asivamosffie.web/asivamosffie/src/assets/scss/_general.scss
@@ -198,6 +198,10 @@ strong {
   margin-left: 0.5em !important;
 }
 
+.ml-1em {
+  margin-left: 1em !important;
+}
+
 .ml-1-5em {
   margin-left: 1.5em !important;
 }
