--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -94,7 +94,7 @@
           ></mat-paginator>
         </div>
       </section>
-      <app-form-observaciones-informe-final-anexos *ngIf="id" [id]="id"></app-form-observaciones-informe-final-anexos>
+      <app-form-observaciones-informe-final-anexos *ngIf="report" [report]="report"></app-form-observaciones-informe-final-anexos>
     </mat-expansion-panel>
   </mat-accordion>
 </div>
