--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-demandantes-convocantes-dj/form-demandantes-convocantes-dj.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-demandantes-convocantes-dj/form-demandantes-convocantes-dj.component.html
@@ -68,7 +68,7 @@
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title 
                 {{ perfil.get('registroCompleto').value == null ? 'sin-diligenciar' : !perfil.get('registroCompleto').value ? 'en-proceso' : 'completo' }}">
-                    {{textoConvocantes}} {{ i+1 }}
+                    {{textoConvocantesCapital}} {{ i+1 }}
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
