--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-convocados-pasiva-dj/form-convocados-pasiva-dj.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-convocados-pasiva-dj/form-convocados-pasiva-dj.component.html
@@ -337,14 +337,14 @@
                                     <div class="text-area-quill auxBox">
                                         <quill-editor class="quill-editor-style card" [styles]="editorStyle"
                                             [modules]="config" required (onContentChanged)="maxLength($event, 1000)"
-                                            formControlName="accionAEvitar" [class.invalid]="
+                                            formControlName="accionAEvitar" #accionAEvitar [class.invalid]="
                                             (perfil.get('accionAEvitar').invalid && perfil.get('accionAEvitar').touched) ||
                                             (perfil.get('accionAEvitar').invalid && estaEditando)
                                           ">
                                         </quill-editor>
                                     </div>
                                     <span class="contador miles">
-                                        {{1000 - perfil.get( 'accionAEvitar' ).value}}
+                                        {{1000 - (textoLimpioNew(accionAEvitar.quillEditor,1000))}}
                                     </span>
                                     <span class="icon-incompleto">
                                         <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
