--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/form-crear-roles/form-crear-roles.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/form-crear-roles/form-crear-roles.component.scss
@@ -1,9 +1,17 @@
 .side-left {
   padding-left: 3em;
+  position: relative;
 
   &::before{
     content: attr( data-line );
     background-color: #fdc101;
     height: 3em;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: rotate(-90deg);
+    left: 0;
+    top: 0;
   }
 }
