--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/form-crear-roles/form-crear-roles.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/form-crear-roles/form-crear-roles.component.html
@@ -55,54 +55,61 @@
             </mat-card-content>
         </mat-card>
 
-        <div class="table-responsive side-left" data-line="Fase de inicio">
-            <table mat-table [dataSource]="dataSource" matSort>
+        <div class="side-left">
+          <aside class="side-left--aside">
+            <span class="side-left--span">
+              Fase de inicio
+            </span>
+          </aside>
+          <div class="table-responsive">
+              <table mat-table [dataSource]="dataSource" matSort>
+            
+                <ng-container matColumnDef="fechaCreacion">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de creación </th>
+                    <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.fechaCreacion }} </b> </td>
+                </ng-container>
           
-              <ng-container matColumnDef="fechaCreacion">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de creación </th>
-                  <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.fechaCreacion }} </b> </td>
-              </ng-container>
-        
-              <ng-container matColumnDef="nombreRol">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre de la lista </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.nombreRol }} </td>
-              </ng-container>
-        
-              <ng-container matColumnDef="estadoRol">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la lista </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoRol }} </td>
-              </ng-container>
-            
-              <ng-container matColumnDef="gestion">
-                <th class="w-20" mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
-                <td mat-cell *matCellDef="let element">
-            
-                  <button mat-raised-button
-                          color="accent" 
-                          class="btn-table"
-                          [routerLink]="[ 'editarRol', element.id ]">
-                          Ver detalle/Editar
-                  </button>
-        
-                  <button mat-raised-button
-                          color="accent" 
-                          class="btn-table">
-                          Desactivar
-                  </button>
-        
-                  <button mat-raised-button
-                          color="accent" 
-                          class="btn-table">
-                          Activar
-                  </button>
-            
-                </td>
-              </ng-container>
-            
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+                <ng-container matColumnDef="nombreRol">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre de la lista </th>
+                  <td mat-cell *matCellDef="let element" align="center"> {{ element.nombreRol }} </td>
+                </ng-container>
+          
+                <ng-container matColumnDef="estadoRol">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la lista </th>
+                  <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoRol }} </td>
+                </ng-container>
+              
+                <ng-container matColumnDef="gestion">
+                  <th class="w-20" mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
+                  <td mat-cell *matCellDef="let element">
+              
+                    <button mat-raised-button
+                            color="accent" 
+                            class="btn-table"
+                            [routerLink]="[ 'editarRol', element.id ]">
+                            Ver detalle/Editar
+                    </button>
+          
+                    <button mat-raised-button
+                            color="accent" 
+                            class="btn-table">
+                            Desactivar
+                    </button>
+          
+                    <button mat-raised-button
+                            color="accent" 
+                            class="btn-table">
+                            Activar
+                    </button>
+              
+                  </td>
+                </ng-container>
+              
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              </table>
+              <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+          </div>
         </div>
     </form>
 </section>
