--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-registro-presupuestal/components/gestionar-drp/gestionar-drp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-registro-presupuestal/components/gestionar-drp/gestionar-drp.component.html
@@ -77,7 +77,7 @@
                             </p>
                             <p>
                                 <strong>Saldo actual de la fuente:</strong>
-                                {{fuente.saldo_actual_de_la_fuente | currency:'':'symbol':'3.0'}}
+                                {{ (fuente.saldo_actual_de_la_fuente_al_guardar !== 0 ? fuente.saldo_actual_de_la_fuente_al_guardar : fuente.saldo_actual_de_la_fuente)  | currency:'':'symbol':'3.0'}}
                             </p>
                             <p>
                                 <strong>Valor solicitado de la fuente:</strong>
@@ -85,7 +85,7 @@
                             </p>
                             <p>
                                 <strong>Nuevo saldo de la fuente:</strong>
-                                {{fuente.nuevo_saldo_de_la_fuente | currency:'':'symbol':'3.0'}}
+                                {{ (fuente.nuevo_saldo_de_la_fuente_al_guardar !== 0 ? fuente.nuevo_saldo_de_la_fuente_al_guardar : fuente.nuevo_saldo_de_la_fuente) | currency:'':'symbol':'3.0'}}
                             </p>
                              <!-- no esta ene l caso de uso<p>
                                 <strong>Estado de las fuentes:</strong>
@@ -115,43 +115,54 @@
                 <span>Departamento: <b>{{proyecto.departamento}}</b></span>
                 <span>Municipio: <b>{{proyecto.municipio}}</b></span>
             </p>
-            <div class="table-responsive text-center">
-                <table mat-table [dataSource]="dataSource[i]" matSort class="mat-elevation-z8">
 
-                    <ng-container matColumnDef="componente">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Componente </th>
-                        <!-- Caso mapeado <td mat-cell *matCellDef="let element"> <b>{{element.fechaFirma | date:'dd/MM/yyyy'}}</b></td>-->
-                        <td mat-cell *matCellDef="let element"> <b>{{element.componente}}</b></td>
-                    </ng-container>
+            <mat-expansion-panel class="expansion-style sub-expansion" *ngFor="let aportante of proyecto.aportantes;index as j;">
+                <mat-expansion-panel-header class="expansion-style--header">
+                    <mat-panel-title class="expansion-style--title">
+                        {{aportante.nombre}}
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+                <div class="table-responsive text-center" *ngIf="proyecto['listaComponentesUsoAportante']">
+                    <table mat-table [dataSource]="proyecto['listaComponentesUsoAportante'][j]" matSort class="mat-elevation-z8">
+    
+                        <ng-container matColumnDef="componente">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Componente </th>
+                            <td mat-cell *matCellDef="let element"> <b>{{element.componente}}</b></td>
+                        </ng-container>
+    
+                        <ng-container matColumnDef="uso">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Uso </th>
+                            <td mat-cell *matCellDef="let element">
+                                <div  class="supportElement" *ngFor="let el of element.uso ; let i = index">
+                                        {{el.nombre}}
+                                </div>
+                            </td>
+                        </ng-container>
+    
+                        <ng-container matColumnDef="valorUso">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor de Uso </th>
+                            <td mat-cell *matCellDef="let element">
+                                <div class="supportElement" *ngFor="let el of element.valorUso ; let i = index">
+                                        {{el.valor }}
+                                </div>
+                            </td>
+                        </ng-container>
+    
+                        <ng-container matColumnDef="valorTotal">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor Total </th>
+                            <td mat-cell *matCellDef="let element"> {{element.valorTotal| currency:'':'symbol':'3.0'}} </td>
+                        </ng-container>
+    
+    
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                    </table>
+                </div>
 
-                    <ng-container matColumnDef="uso">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Uso </th>
-                        <td mat-cell *matCellDef="let element">
-                            <div  class="supportElement" *ngFor="let el of element.uso ; let i = index">
-                                    {{el.nombre}}
-                            </div>
-                        </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="valorUso">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor de Uso </th>
-                        <td mat-cell *matCellDef="let element">
-                            <div class="supportElement" *ngFor="let el of element.valorUso ; let i = index">
-                                    {{el.valor }}
-                            </div>
-                        </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="valorTotal">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor Total </th>
-                        <td mat-cell *matCellDef="let element"> {{element.valorTotal| currency:'':'symbol':'3.0'}} </td>
-                    </ng-container>
+            </mat-expansion-panel>
 
 
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                </table>
-            </div>
+            
         </mat-expansion-panel>
     </mat-accordion>
     <div class="botones">
