Fix front-integracion 4.2.2

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/control-tabla-proceso-defensa-judicial/control-tabla-proceso-defensa-judicial.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/control-tabla-proceso-defensa-judicial/control-tabla-proceso-defensa-judicial.component.html
@@ -68,7 +68,7 @@
                     Actualizar proceso
                 </button>
                 <button mat-raised-button color="accent" class="btn-table" (click)="GetPlantillaDefensaJudicial(element.defensaJudicialId)"
-                    *ngIf="(element.estadoProcesoCodigo === '1' || element.estadoProcesoCodigo === '2') && element.registroCompletoNombre=='Completo'">
+                    *ngIf="(element.estadoProcesoCodigo === '2') && element.registroCompletoNombre=='Completo'">
                     Descargar ficha de estudio
                 </button>
                 <button mat-raised-button color="accent" class="btn-table" 
