--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-convocados-dj/form-convocados-dj.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-convocados-dj/form-convocados-dj.component.html
@@ -144,7 +144,7 @@
                 </mat-card-content>
             </mat-card>
             <div class="text-right">
-                <button mat-button color="warn" type="button" class="btn-eliminar" (click)="eliminarPerfil( i )"
+                <button mat-button color="warn" type="button" class="btn-eliminar" (click)="eliminar( i )"
                     [disabled]="perfiles.controls.length == 1">
                     <img src="assets/img/icon/menos.svg" alt="Eliminar vigencia">
                     Eliminar convocado
