ajustes actuaion proceso

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/control-tabla-actuacion-proceso/control-tabla-actuacion-proceso.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/control-tabla-actuacion-proceso/control-tabla-actuacion-proceso.component.html
@@ -1,5 +1,5 @@
 <div class="tabs--actions">
-    <button mat-raised-button color="accent" class="tabs--btn" (click)="this.irNuevo()">
+    <button mat-raised-button color="accent" class="tabs--btn" (click)="this.irNuevo()" [disabled]="this.longitudActuaciones.length==1">
         Registrar actuación del proceso
     </button>
 </div>
