--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/tabla-crear-roles/tabla-crear-roles.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/tabla-crear-roles/tabla-crear-roles.component.html
@@ -40,7 +40,8 @@
     
               <button mat-raised-button
                       color="accent" 
-                      class="btn-table">
+                      class="btn-table"
+                      name="desactivarBtn">
                       Desactivar
               </button>
     
