--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/control-tabla-actuacion-proceso/control-tabla-actuacion-proceso.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/control-tabla-actuacion-proceso/control-tabla-actuacion-proceso.component.html
@@ -23,7 +23,7 @@
         <ng-container matColumnDef="numeroActuacion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de Actuación </th>
             <td mat-cell *matCellDef="let element" align="center">
-                {{element.id}}
+                {{element.numeroActuacion}}
             </td>
         </ng-container>
         <ng-container matColumnDef="actuacion">
